Added some styles to list and body

--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
             <input type="text" placeholder="Enter the task you wish to do"> 
             <button> Add Task </button>
         </div>
-    <h3>Pending</h3>
-    <div class="pending"> <ol>
-        <li>Go to GYM</li>
-        <li>Go for a Jog</li>
-        <li>Finish WOrk</li>
+        <div class="pending">
+            <h3>Pending</h3>
+        <ol>
+        <li>Go to GYM</li><div><i class="fas fa-trash"></i></div>
+        <li>Go for a Jog</li><div><i class="fas fa-trash"></i></div>
+        <li>Finish Work</li><div><i class="fas fa-trash"></i></div>
     </ol>
     </div>
-    <h3>Completed</h3>
+    <div class="completed"><h3>Completed</h3>
     <ol>
         <li><strike>Buy Food</strike></li>
         <li><strike>Update Phone</strike></li>
         <li><strike>Order stuff</strike></li>
-    </ol>
+    </ol></div>
     </section>
 
     <footer>
