--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="pending">
             <h3>Pending</h3>
         <ol>
-        <li>Go to GYM</li><div><i class="fas fa-trash"></i></div>
-        <li>Go for a Jog</li><div><i class="fas fa-trash"></i></div>
-        <li>Finish Work</li><div><i class="fas fa-trash"></i></div>
+        <li>Go to GYM <i class="fas fa-trash"></i></li>
+        <li>Go for a Jog <i class="fas fa-trash"></i></li>
+        <li>Finish Work <i class="fas fa-trash"></i></li>
     </ol>
     </div>
     <div class="completed"><h3>Completed</h3>
