--- a/index.html
+++ b/index.html
@@ -27,23 +27,22 @@
             <button> Add Task </button>
         </div>
         <div class="pending">
-            <h3>Pending</h3>
+            <h3>Pending Tasks</h3>
         <ol>
-        <li>Go to GYM <i class="fas fa-trash"></i></li>
-        <li>Go for a Jog <i class="fas fa-trash"></i></li>
-        <li>Finish Work <i class="fas fa-trash"></i></li>
+        <li>Go to GYM<span><i class="fas fa-trash"></i></span></li>
+        <li>Go for a Jog<span><i class="fas fa-trash"></i></span></li>
+        <li>Finish Work<span><i class="fas fa-trash"></i></span></li>
+        
     </ol>
     </div>
     </section>
 
     <footer>
-        <div> <a href="https://github.com/theinfinityplayer" target="_blank" rel="noopener noreferrer"> Akash Shukla</a> </div>
+        <div> <a href="https://github.com/theinfinityplayer" target="_blank" rel="noopener noreferrer">Akash Shukla</a> </div>
         <div> <a href="https://www.instagram.com/fallenfinix" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a>
             <a href="https://github.com/theinfinityplayer" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/akashshuklaa" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a>
-  
         </div>
     </footer>
 </body>
-
 </html>
